--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,16 +38,11 @@ jobs:
         run: |
            sudo apt-get update
            sudo apt-get install tzdata locales -y
-           sudo locale-gen pt_BR.UTF-8
-           sudo locale-gen en_US.UTF-8
-           sudo locale-gen es_PY.UTF-8
-           sudo locale-gen ru_RU.UTF-8
-           sudo locale-gen af_ZA.UTF-8
            sudo locale-gen pt_BR
            sudo locale-gen en_US
            sudo locale-gen es_PY
            sudo locale-gen ru_RU
            sudo locale-gen af_ZA
            sudo update-locale
-           echo "All languages..."
+           echo "Todas as linguagens..."
            locale -a
