--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,11 +38,7 @@ jobs:
         run: |
            sudo apt-get update
            sudo apt-get install tzdata locales -y
-           sudo locale-gen pt_BR
-           sudo locale-gen en_US
-           sudo locale-gen es_PY
-           sudo locale-gen ru_RU
-           sudo locale-gen af_ZA
+           sudo locale-gen pt_BR en_US es_PY ru_RU af_ZA
            sudo update-locale
            echo "Todas as linguagens..."
            locale -a
