--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
              sudo apt-get update
              sudo apt-get install tzdata locales -y
-             sudo locale-gen pt_BR.UTF-8 en_US.UTF-8 es_PY.UTF-8 ru_RU.UTF-8 af_ZA.UTF-8 pt_BR en_US es_PY ru_RU af_ZA
+             sudo locale-gen uk_UA pt_PT.UTF-8 en_US en_US.UTF-8 zh_CN.UTF-8 zh.UTF-8 es_ES es_ES.UTF-8 es ar_AE.UTF-8 ar.UTF-8 pt_PT de_LU.UTF-8 fr fr.UTF-8
              sudo update-locale
              echo "Todas as linguagens..."
              locale -a
